--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore, beatae!</span>
 </body>
 </html>
