--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore, beatae!</span>
-</body>
+  </head>
+  <body>
+    <p>art</p>
+    <span
+      >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore,
+      beatae!</span
+    >
+  </body>
 </html>
